--- a/src/componentes/Home/Home.css
+++ b/src/componentes/Home/Home.css
@@ -1,8 +1,8 @@
-  .container{
+  .containerHome{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    justify-content: center;
+    margin-top: 10%;
 } 
 
 
@@ -17,16 +17,15 @@
        justify-content: center;
        align-items: center;
        font-family: 'Smooch Sans', sans-serif;
-       padding-top: 250px;
     }
 
     .hs h2{
         color: red;
-        font-size: 60px;
+        font-size: 80px;
     }
     .hs h1{
         color: white;
-        font-size: 60px;
+        font-size: 100px;
     }
 
     .icons{
