--- a/src/componentes/Proyectos/Proyectos.css
+++ b/src/componentes/Proyectos/Proyectos.css
@@ -1,29 +1,25 @@
 
 .container-proyects1{
     display: flex;
-    justify-content: space-between;
-   margin-top: 15px;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+    text-align: center;
 }
 
 
 
 .container-proyects2{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 15px;
+    border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 30px 40px rgb(122, 40, 40, 0.4);
-    margin: 20px;
-    text-align: center;
-    transition: all 0.25s;
+    transition: all 0.30s;
     cursor: pointer;
+    padding: 30px;
 }
 
 .container-proyects2:hover{
     transform: translate(-15px);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 12px 16px rgba(85, 23, 23, 0.4);
 }
 
 
@@ -35,13 +31,36 @@
     font-size: 25px;
 }
 
-.desrcipcion{
+.learnzilla-img{
+    border-style: solid;
+    border-radius: 10px;
+    text-decoration: none;
+    color: white;
+}
+
+.descr{
     display:flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     font-family: 'Nunito', sans-serif;
     padding: 20px;
+    max-width: fit-content;
+    max-height: fit-content;
 }
+
+
+
+
+
+
+/* .desrcipcion{
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    font-family: 'Nunito', sans-serif;
+    padding: 20px;
+} */
 
 
