animaciones y paleta de colores nueva

--- a/src/componentes/Contacto/Contacto.css
+++ b/src/componentes/Contacto/Contacto.css
@@ -6,7 +6,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: #bd4d4d60;  
+    background-color: #1D5C63;  
     margin: 20px;
     width: 30vw;
     height: 20vh;
