--- a/src/componentes/Habilidades/Habilidades.css
+++ b/src/componentes/Habilidades/Habilidades.css
@@ -3,8 +3,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 15px;
     font-family: 'Smooch Sans', sans-serif;
+    color: #F47C7C;
 } 
 
 .textoH section{
@@ -21,7 +22,8 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    background-color: #3f3e3e60;
+    background-color: #2f2e2e60;
+    border: 1px solid black;
 }
 
 .icono-titulo{
