--- a/src/componentes/Proyectos/Proyectos.css
+++ b/src/componentes/Proyectos/Proyectos.css
@@ -2,24 +2,28 @@
 .container-proyects1{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: row;
     text-align: center;
 }
 
 
-
 .container-proyects2{
+    display: block;
+    flex-direction: row;
     border-radius: 10px;
     overflow: hidden;
     transition: all 0.30s;
     cursor: pointer;
     padding: 30px;
+    height: 65vh;
+    background-color: #417D7A;
+    border: 4px solid #FFA8A8
 }
 
 .container-proyects2:hover{
-    transform: translate(-15px);
-    box-shadow: 0 12px 16px rgba(85, 23, 23, 0.4);
+    transform: translate(-10px);
+    box-shadow: 15px 1px 16px rgba(171, 57, 57, 0.4);
 }
 
 
@@ -32,19 +36,15 @@
 }
 
 .learnzilla-img{
-    border-style: solid;
+    border: 2px solid white;
     border-radius: 10px;
     text-decoration: none;
     color: white;
 }
 
 .descr{
-    display:flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
     font-family: 'Nunito', sans-serif;
-    padding: 20px;
+    padding: 10px;
     max-width: fit-content;
     max-height: fit-content;
 }
@@ -64,3 +64,27 @@
 } */
 
 
+.modal{
+    color: black;
+}
+
+.a{color: white;}
+
+div.modal-header{
+    background-color: #417D7A;
+    color: white;
+}
+
+button.btn.btn-primary{
+    background-color: #FFA8A8;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+}
+
+button.btn.btn-secondary{
+    background-color: grey;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+}
