--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   color: white;
-  background: url('../src/componentes/imgs/fondoestrellas.jpg');
+  background: #EDE6DB;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
