--- a/src/componentes/Proyectos/Proyectos.css
+++ b/src/componentes/Proyectos/Proyectos.css
@@ -16,7 +16,6 @@
     transition: all 0.30s;
     cursor: pointer;
     padding: 30px;
-    height: 65vh;
     background-color: #417D7A;
     border: 4px solid #FFA8A8
 }
@@ -68,7 +67,13 @@
     color: black;
 }
 
-.a{color: white;}
+.a{color: white;
+    text-decoration: none;
+    }
+
+ .a:hover{
+     color: white;
+ }   
 
 div.modal-header{
     background-color: #417D7A;
