--- a/src/componentes/Contacto/Contacto.css
+++ b/src/componentes/Contacto/Contacto.css
@@ -8,15 +8,12 @@
     align-items: center;
     background-color: #1D5C63;  
     margin: 20px;
-    width: 30vw;
-    height: 20vh;
+    min-width: 30vw;
+    min-height: 20vh;
+    
 }
 
-.telefono{
-    display: block;
-    flex-direction: row;
-    justify-content: space-between;
-}
+
 
 .icono-iphone{
     display: flex;
@@ -47,4 +44,13 @@
 
 .icono{
     font-size: 3rem;
+}
+
+
+
+@media screen and (max-width:700px){
+   .telefono{
+    font-size: 40px
+   }
+
 }
