--- a/src/componentes/Habilidades/Habilidades.css
+++ b/src/componentes/Habilidades/Habilidades.css
@@ -40,3 +40,9 @@
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.3);
 }
 
+
+@media screen and (max-width: 700px){
+    .textoH{
+        font-size: 40px;
+    }
+}
