--- a/src/componentes/Contacto/Contacto.css
+++ b/src/componentes/Contacto/Contacto.css
@@ -1,4 +1,4 @@
-
+/* 
 
 
 .contacto{
@@ -8,9 +8,8 @@
     align-items: center;
     background-color: #1D5C63;  
     margin: 20px;
-    min-width: 30vw;
+    min-width: 20vw;
     min-height: 20vh;
-    
 }
 
 
@@ -43,14 +42,15 @@
 }
 
 .icono{
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 
 
-@media screen and (max-width:700px){
+
+@media screen and (min-width:500px){
    .telefono{
-    font-size: 40px
+    font-size: 10px
    }
 
-}
+} */
