--- a/src/componentes/Proyectos/Proyectos.css
+++ b/src/componentes/Proyectos/Proyectos.css
@@ -1,95 +1,101 @@
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.textoH{
+    font-size: 60px;
+}
 
 .container-proyects1{
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     flex-direction: row;
     text-align: center;
-}
-
-
-.container-proyects2{
-    display: block;
-    flex-direction: row;
-    border-radius: 10px;
-    overflow: hidden;
-    transition: all 0.30s;
-    cursor: pointer;
-    padding: 30px;
-    background-color: #417D7A;
-    border: 4px solid #FFA8A8
-}
-
-.container-proyects2:hover{
-    transform: translate(-10px);
-    box-shadow: 15px 1px 16px rgba(171, 57, 57, 0.4);
-}
-
-
-
-
-.titulo-img{
-    display: block;
-    font-family: 'Nunito', sans-serif;
-    font-size: 25px;
-}
-
-.learnzilla-img{
-    border: 2px solid white;
-    border-radius: 10px;
-    text-decoration: none;
-    color: white;
-}
-
-.descr{
-    font-family: 'Nunito', sans-serif;
-    padding: 10px;
-    max-width: fit-content;
-    max-height: fit-content;
-}
-
-
-
-
-
-
-/* .desrcipcion{
-    display:flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    font-family: 'Nunito', sans-serif;
-    padding: 20px;
-} */
+    margin-top: 1.5rem;
+    }
 
 
 .modal{
     color: black;
 }
-
-.a{color: white;
-    text-decoration: none;
-    }
-
- .a:hover{
-     color: white;
- }   
+  
 
 div.modal-header{
-    background-color: #417D7A;
-    color: white;
+    background-color: #313552;
+    color: #EEE6CE;
 }
 
 button.btn.btn-primary{
-    background-color: #FFA8A8;
+    background-color: #B8405E;
     text-decoration: none;
     border: none;
     cursor: pointer;
 }
 
 button.btn.btn-secondary{
-    background-color: grey;
+    background-color: #2EB086;
     text-decoration: none;
     border: none;
     cursor: pointer;
+}
+
+.card-pokedex{
+    width: 350px;
+    height: 350px;
+    background-image: url(../imgs/Pokedex.png) ;
+    background-size: cover;
+    border-radius: 10px;
+    box-shadow: 3px 5px 5px rgba(6, 31, 40, 0.844);
+    overflow: hidden;
+}
+.card-learnzilla{
+    width: 350px;
+    height: 350px;
+    background-image: url(../imgs/Learnzilla.png) ;
+    background-size: cover;
+    border-radius: 10px;
+    box-shadow: 3px 5px 5px rgba(6, 31, 40, 0.844);
+    overflow: hidden;
+}
+.card-three{
+    width: 350px;
+    height: 350px;
+    background-image: url(../imgs/Minecraft.png) ;
+    background-size: cover;
+    border-radius: 10px;
+    box-shadow: 3px 5px 5px rgba(6, 31, 40, 0.844);
+    overflow: hidden;
+}
+
+
+.content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, .5);
+    opacity: 0;
+    transition: .5s;
+}
+
+.content h2, a{
+    color: rgb(255, 255, 255);
+}
+.content  a{
+    cursor: pointer;
+}
+
+
+.card-pokedex:hover .content{
+    opacity: 1;
+}
+.card-three:hover .content{
+    opacity: 1;
+}
+.card-learnzilla:hover .content{
+    opacity: 1;
 }
