--- a/src/componentes/NavBar/NavBar.css
+++ b/src/componentes/NavBar/NavBar.css
@@ -18,6 +18,18 @@
     padding: 0.5rem;
 }
 
+.redes{
+    display: flex;
+    position: relative;
+    justify-content: flex-end;
+}
+
+@media screen and (max-width: 400px){
+    .nav-link{font-size: 14px;}
+
+   
+}
+
 
 
 
