--- a/src/componentes/SobreMi/SobreMi.css
+++ b/src/componentes/SobreMi/SobreMi.css
@@ -1,4 +1,11 @@
-.info{
+.containerSobreMi{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.info {
     position: relative;
     margin-top: 2rem;
     background-color: #313552;
@@ -7,67 +14,68 @@
     justify-content: flex-start;
     font-family: 'Nunito', sans-serif;
     font-size: 25px;
-    color:#EEE6CE
+    color: #EEE6CE;
+    margin-left: 2rem;
+    
 }
 
-.fotoPerfil{
+.fotoPerfil {
     border-radius: 2%;
     transition: .5s;
 }
 
-.fotoPerfil:hover{
+.fotoPerfil:hover {
     box-shadow: 0 0.5rem 0.9rem rgb(157, 51, 72);
     transition: box-shadow 1s ease;
 }
 
-.sobremi{
+.sobremi {
     position: relative;
     color: #EEE6CE;
     font-size: 60px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 15px;
     font-family: 'Smooch Sans', sans-serif;
-} 
+}
 
-.sobremi section{
+.sobremi section {
     padding: 10px;
 }
 
-.number{
+.number {
     color: #B8405E;
 }
 
-.texto{
+.texto {
     padding: 1rem;
 }
 
-.samuel{
+.samuel {
     display: block;
     justify-content: center;
     flex-direction: row;
     color: #2EB086;
 }
 
-.s1{
+.s1 {
     color: #2EB086;
     font-family: 'Nunito', sans-serif;
     font-size: 30px;
 }
 
-.s2{
+.s2 {
     padding-left: 1.2rem;
 }
 
-.hola{
+.hola {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    
+
 }
 
-.descarga-boton{
+.descarga-boton {
     font-size: 20px;
     color: white;
     font-family: 'Nunito', sans-serif;
@@ -76,7 +84,7 @@
     background-color: #B8405E;
 }
 
-.divBoton{
+.divBoton {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -84,34 +92,36 @@
     padding-top: 1rem;
 }
 
-.descarga-boton:hover{
-    background-color:#630000;
-    transition: 1s ease; 
+.descarga-boton:hover {
+    background-color: #630000;
+    transition: 1s ease;
     color: white;
     text-decoration: none;
 }
 
 
 @media screen and (max-width:1000px) {
-    .sobremi{
-        font-size: 40px;
+    .sobremi {
+        font-size: 32px;
     }
-    .fotoPerfil{
-       width: 200px;
-       height: 200px;
+
+    .fotoPerfil {
+        width: 200px;
+        height: 200px;
     }
-    .info{
+
+    .info {
         display: flex;
         justify-content: flex-start;
         flex-wrap: wrap;
         font-size: 15px;
     }
-    .s1{
+
+    .s1 {
         font-size: 20px;
     }
 
-    .descarga-boton{
-       font-size: 20px;
+    .descarga-boton {
+        font-size: 20px;
     }
 }
-
