--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+html{
+  scroll-behavior: smooth;
+}
+
 body {
-  
   color: white;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
