--- a/src/componentes/SobreMi/SobreMi.css
+++ b/src/componentes/SobreMi/SobreMi.css
@@ -13,7 +13,7 @@
     flex-direction: row;
     justify-content: flex-start;
     font-family: 'Nunito', sans-serif;
-    font-size: 25px;
+    font-size: 18x;
     color: #EEE6CE;
     margin-left: 2rem;
     
@@ -30,6 +30,7 @@
 }
 
 .sobremi {
+    
     position: relative;
     color: #EEE6CE;
     font-size: 60px;
@@ -61,7 +62,7 @@
 .s1 {
     color: #2EB086;
     font-family: 'Nunito', sans-serif;
-    font-size: 30px;
+    font-size: 17px;
 }
 
 .s2 {
